--- a/BookStore/Views/Categories/Index.cshtml
+++ b/BookStore/Views/Categories/Index.cshtml
@@ -1,29 +1,45 @@
 ﻿@model List<Category>
-
+@section Title {
+    Categories
+}
+@section SubTitle {
+    Show
+}
+@section button{
+    <a asp-controller="Categories" asp-action="Create" class="btn btn-outline-info btn-sm custom-width">Create</a>
+}
 @if(!@Model.Any()){
-    <div class="alert alert-warning alert-dismissible">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-        <h5><i class="icon fas fa-exclamation-triangle"></i> Alert!</h5>
-        There are no Categories!.
+    <div class="card-body">
+        <div class="alert alert-warning alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h5><i class="icon fas fa-exclamation-triangle"></i> Alert!</h5>
+            There are no Categories!.
+        </div>
     </div>
 }
 
 else{
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th style="width: 10px">#</th>
-            <th>Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in @Model)
-        {
-            <tr>
-                <td>@item.Id</td>
-                <td>@item.Name</td>
-            </tr>
-        }
-    </tbody>
-</table>
+    <div class="card-body">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th style="width: 10px">#</th>
+                    <th>Name</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in @Model)
+                {
+                    <tr>
+                        <td>@item.Id</td>
+                        <td>@item.Name</td>
+                        <td>
+                            <a asp-controller="Categories" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 }
