--- a/BookStore/Views/Shared/_Layout.cshtml
+++ b/BookStore/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <link rel="stylesheet" href="~/Dashboard/plugins/fontawesome-free/css/all.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/Dashboard/dist/css/adminlte.min.css">
+    <!-- custem style -->
+    <link rel="stylesheet" href="~/Dashboard/dist/css/LayoutStyle.css">
+
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
@@ -247,7 +250,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0">Starter Page</h1>
+                            <h1 class="m-0">@RenderSection("Title", false)</h1>
                         </div><!-- /.col -->
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
@@ -265,12 +268,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
                     <div class="row">
                         <div class="col-12">
                             <div class="card">
-                                <div class="card-header">
-                                    <h5 class="m-0">Featured</h5>
+                                <div class="card-header d-flex align-items-center justify-content-between">
+                                    <h5 class="m-0">@RenderSection("SubTitle", false)</h5>
+                                    @RenderSection("button", false)
                                 </div>
-                                <div class="card-body">
                                     @RenderBody()
-                                </div>
                             </div>
                         </div>
                     </div>
