--- a/BookStore/Views/Categories/Create.cshtml
+++ b/BookStore/Views/Categories/Create.cshtml
@@ -6,7 +6,7 @@
 @section SubTitle {
     Create Category
 }
-<form adp-cotroller="Categories">
+<form asp-controller="Categories">
     <div class="card-body">
         <div class="form-group">
             <label asp-for="Name">Category Name</label>
